...
    router.dismissTo('/');
  }

  return (
    <HeaderIconButton
      accessibilityHint="返回上一个页面"
      accessibilityLabel="返回"
      icon={{
        android: 'arrow_back',
        ios: 'chevron.left',
        web: 'arrow_back',
      }}
      onPress={goBack}
...
