...
          hasDivider
          icon={{
            android: 'receipt_long',
            ios: 'list.bullet.rectangle',
            web: 'receipt_long',
          }}
          label="更新日志"
          onPress={() => router.push('/changelog')}
        />
      </View>
    </>
  );
}
...
